Fix dashboard infinite scroll: wrap charts in fixed-height containers

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ html, body {
 
 /* Sparkline container */
 .sparkline-container {
+  position: relative;
   width: 100%;
   height: 40px;
   flex-shrink: 0;
